force-app/main/default/objects/CJFW_Notification__c/CJFW_Notification__c.object-meta.xml
<CustomObject>
    <description>알림 관리</description>
    <label>Notification</label>
    <nameField>
        <displayFormat>NM{YY}{MM}{DD}{000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>