force-app/main/default/objects/CJFW_Notification__c/fields/CustomNotificationTypeId__c.field-meta.xml
<CustomField>
    <fullName>CustomNotificationTypeId__c</fullName>
    <description>Custom Notification Type Developer Name</description>
    <label>Custom Notification Type API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>