force-app/main/default/objects/CJFW_Notification__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>활성화 여부</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>