force-app/main/default/objects/CJFW_Notification__c/fields/IsSendToSender__c.field-meta.xml
<CustomField>
    <fullName>IsSendToSender__c</fullName>
    <defaultValue>false</defaultValue>
    <description>발신자와 수신자가 같을 경우 알림 보낼지 여부
TRUE : 보냄, FALSE : 제외</description>
    <label>IsSendToSender</label>
    <type>Checkbox</type>
</CustomField>