force-app/main/default/objects/CJFW_Notification__c/fields/PageReference__c.field-meta.xml
<CustomField>
    <fullName>PageReference__c</fullName>
    <description>SFDC App 알림 클릭시 이동할 PageReference JSON String 값</description>
    <label>PageReference</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>